# open-streaming-lab

./: .gitignore  Makefile  README.md  compose.yaml  package-lock.json  package.json  pyproject.toml
.loom/decisions/: python-first-streaming-roadmap.md
.loom/evidence/: 2026-06-15-apicurio-schema-registry.md  2026-06-15-baseline-closure-repo-hygiene.md  2026-06-15-duckdb-analytics-sink.md  2026-06-15-observability-portfolio-polish.md  2026-06-15-python-stream-processor.md  2026-06-15-schema-validation-dlq.md  20260613-python-kafka-tutorial-validation.md
.loom/knowledge/: project-name.md
.loom/research/: 2026-06-15-next-level-streaming-roadmap.md  2026-06-15-quix-streams-processor.md  20260613-local-kafka-mockingbird-tutorial.md
.loom/specs/: next-level-streaming-platform.md
.loom/tickets/: 2026-06-15-apicurio-schema-registry-chapter.md  2026-06-15-duckdb-analytics-sink.md  2026-06-15-next-level-streaming-platform.md  2026-06-15-observability-and-portfolio-polish.md  2026-06-15-python-stream-processor.md  2026-06-15-schema-validation-dlq.md
.loom/tickets/done/: 2026-06-15-apicurio-schema-registry-chapter.md  2026-06-15-baseline-closure-and-repo-hygiene.md  2026-06-15-duckdb-analytics-sink.md  2026-06-15-next-level-streaming-platform.md  2026-06-15-observability-and-portfolio-polish.md  2026-06-15-python-stream-processor.md  2026-06-15-schema-validation-dlq.md  20260613-python-kafka-mockingbird-tutorial.md
docs/: architecture.md  interview-guide.md  runbook.md
schemas/: web_analytics_v1.json
src/streaming_tutorial/: __init__.py  admin.py  analytics.py  config.py  consumer.py  duckdb_sink.py  processor.py  producer.py  registry.py  test_duckdb_sink.py  test_processor.py  test_producer.py  test_registry.py  test_validation.py  validation.py
tools/: mockingbird-jsonl.mjs
